--- a/.dockerignore
+++ b/.dockerignore
@@ -1,32 +1,83 @@
+# ═══════════════════════════════════════════════════════════════════════════════
+# ChainBridge V1.2.0 Docker Ignore
+# PAC-OCC-P31 — Containerization
+# Law: "Keep the image clean. No secrets. No dev artifacts."
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# ─── Git / Version Control ─────────────────────────────────────────────────────
 .git
 .gitignore
+.github
+
+# ─── Environment / Secrets (CRITICAL — NEVER BAKE IN) ──────────────────────────
 .env
-.env.*.backup
-local_repo_snapshot.bundle
-logs/
-*.log
-__pycache__/
-.venv/
-.venv/*
-*.pyc
-# Python
+.env.*
+.env.backup
+*.key
+*.pem
+
+# ─── Python Artifacts ──────────────────────────────────────────────────────────
 __pycache__/
 *.py[cod]
 *.pyo
 *.pyd
-*.sqlite3
-.env
-.env.*
+.Python
+*.so
+.eggs/
+*.egg-info/
+pip-log.txt
 
-# Virtual envs
+# ─── Virtual Environments ──────────────────────────────────────────────────────
 .venv/
 venv/
+env/
 
-# Node
+# ─── Databases (Mounted at runtime, NOT baked in) ──────────────────────────────
+*.db
+*.sqlite3
+chainbridge.db
+
+# ─── Staging/Incoming (Runtime artifacts) ──────────────────────────────────────
+_incoming/
+
+# ─── Logs ──────────────────────────────────────────────────────────────────────
+logs/
+*.log
+archived_logs/
+
+# ─── IDE / Editor ──────────────────────────────────────────────────────────────
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# ─── OS Artifacts ──────────────────────────────────────────────────────────────
+.DS_Store
+Thumbs.db
+
+# ─── Build Artifacts ───────────────────────────────────────────────────────────
+build/
+dist/
+htmlcov/
+.coverage
+*.cover
+
+# ─── Node.js (ChainBoard UI — built separately) ────────────────────────────────
 node_modules/
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+chainboard-ui/node_modules/
+
+# ─── Test Artifacts ────────────────────────────────────────────────────────────
+.pytest_cache/
+.tox/
+nosetests.xml
+coverage.xml
+
+# ─── Legacy / Archive ──────────────────────────────────────────────────────────
+archive/
+local_repo_snapshot.bundle
 
 # VS Code
 .vscode/*
