--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,149 @@
+# ═══════════════════════════════════════════════════════════════════════════════
+# CHAINBRIDGE V1.2.0 — DOCKER COMPOSE
+# PAC-OCC-P31 — Containerization
+#
+# GOVERNANCE:
+# - LAW-09: Immutable Infrastructure
+# - PERSISTENCE: chainbridge.db mounted from host (survives container restarts)
+# - SECRETS: Injected via .env at runtime (never baked in)
+#
+# USAGE:
+#   docker-compose up --build           # Build and start
+#   docker-compose up -d                # Start detached
+#   docker-compose logs -f core         # Follow logs
+#   docker-compose down                 # Stop and remove
+#
+# THEMES:
+#   AGENT_THEME=DEFAULT                 # Corporate Mode
+#   AGENT_THEME=KILLER_BEES             # Wu-Tang Mode 🐝
+# ═══════════════════════════════════════════════════════════════════════════════
+
+version: '3.8'
+
 services:
-  # Main Benson API Server
-  benson-api:
-    build: .
-    container_name: benson-api
-    ports:
-      - "8000:8000"
+  # ═══════════════════════════════════════════════════════════════════════════
+  # CORE: ChainBridge Constitutional Control Plane
+  # The Brain (Benson), Brakes (Kill Switch), Memory (ChainAudit)
+  # ═══════════════════════════════════════════════════════════════════════════
+  core:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: chainbridge:v1.2.0
+    container_name: chainbridge_core
+    
+    # SECURITY: Run as non-root user
+    user: "1000:1000"
+    
+    # Environment Configuration
+    environment:
+      - AGENT_THEME=${AGENT_THEME:-DEFAULT}
+      - PYTHONUNBUFFERED=1
+      - CHAINBRIDGE_DB_PATH=/app/data/chainbridge.db
+    
+    # Secrets (injected at runtime, never baked)
     env_file:
       - .env
+    
+    # PERSISTENCE: Volume Mapping
     volumes:
-      - ./:/app
-      - ./sample_data:/app/sample_data
-      - ./benson_metrics.json:/app/benson_metrics.json
-    restart: unless-stopped
-    command: python benson_system.py --mode api-server --port 8000
+      # Database persistence (CRITICAL - survives container restarts)
+      - ./chainbridge.db:/app/data/chainbridge.db
+      
+      # Policy documents (read-only)
+      - ./docs/policies:/app/docs/policies:ro
+      
+      # Governance registry (read-only)
+      - ./docs/governance:/app/docs/governance:ro
+      
+      # Logs (persist on host)
+      - ./logs:/app/logs
+      
+      # Staging area for Uplink responses
+      - ./_incoming:/app/_incoming
+    
+    # Ports
+    ports:
+      - "8000:8000"
+    
+    # Health Check
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
+      start_period: 10s
       retries: 3
-
-  # RSI Bot in compatibility mode (optional)
-  benson-rsi:
-    build: .
-    container_name: benson-rsi
-    env_file:
-      - .env
-    volumes:
-      - ./:/app
-    restart: "no"  # Don't restart automatically
-    command: python benson_system.py --mode rsi-compat --once
-    profiles: ["rsi-only"]  # Only start with --profile rsi-only
-
-  # Original RSI Bot (for backward compatibility)
-  benson-legacy:
-    build: .
-    container_name: benson-legacy
-    env_file:
-      - .env
-    volumes:
-      - ./:/app
+    
+    # Restart Policy
     restart: unless-stopped
-    command: python benson_rsi_bot.py
-    profiles: ["legacy"]  # Only start with --profile legacy
+    
+    # Default Command: API Server
+    command: ["python", "-m", "uvicorn", "api.server:app", "--host", "0.0.0.0", "--port", "8000"]
+
+  # ═══════════════════════════════════════════════════════════════════════════
+  # TESTS: Run ChainAudit verification (one-shot)
+  # ═══════════════════════════════════════════════════════════════════════════
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: chainbridge:v1.2.0
+    container_name: chainbridge_tests
+    user: "1000:1000"
+    
+    environment:
+      - AGENT_THEME=${AGENT_THEME:-DEFAULT}
+      - PYTHONUNBUFFERED=1
+    
+    volumes:
+      - ./chainbridge.db:/app/data/chainbridge.db
+    
+    # One-shot: Run tests and exit
+    command: ["python", "-m", "pytest", "tests/audit/", "-v"]
+    
+    # Only start manually
+    profiles: ["test"]
+
+  # ═══════════════════════════════════════════════════════════════════════════
+  # UPLINK: Benson Neural Link (interactive mode)
+  # ═══════════════════════════════════════════════════════════════════════════
+  uplink:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: chainbridge:v1.2.0
+    container_name: chainbridge_uplink
+    user: "1000:1000"
+    
+    environment:
+      - AGENT_THEME=${AGENT_THEME:-DEFAULT}
+      - PYTHONUNBUFFERED=1
+    
+    env_file:
+      - .env
+    
+    volumes:
+      - ./_incoming:/app/_incoming
+    
+    # Interactive mode
+    stdin_open: true
+    tty: true
+    
+    command: ["python", "src/core/uplink/benson_uplink.py", "--interactive"]
+    
+    # Only start manually
+    profiles: ["uplink"]
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# NETWORKS (Future: Add for multi-service communication)
+# ═══════════════════════════════════════════════════════════════════════════════
+networks:
+  default:
+    name: chainbridge_network
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# VOLUMES (Named volumes for persistent data)
+# ═══════════════════════════════════════════════════════════════════════════════
+volumes:
+  chainbridge_data:
+    driver: local
