chore(config): update pytest, deps, and README PAC-ATLAS-P25

--- a/pytest.ini
+++ b/pytest.ini
@@ -13,3 +13,17 @@ norecursedirs = ChainBridge .venv __pycache__ .git
 # Warning capture: show summary consistently (non-fatal)
 filterwarnings =
     default
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# PAC-BENSON-CORR-P08: DETERMINISTIC TERMINATION ENFORCEMENT
+# Invariant: CB-INV-TEST-TERM-001 — All test executions MUST terminate
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# Hard timeout per test (seconds) — prevents infinite hangs
+timeout = 300
+
+# Session timeout (5 minutes total) — absolute session limit
+timeout_method = thread
+
+# Fail on fixture timeout
+timeout_func_only = false
