--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,16 @@
     "${workspaceFolder}"
   ],
   "python.analysis.typeCheckingMode": "basic",
-  "python.analysis.diagnosticMode": "workspace",
+  "python.analysis.diagnosticMode": "openFilesOnly",
   "python.analysis.useLibraryCodeForTypes": true,
   "python.analysis.autoSearchPaths": true,
   "python.analysis.exclude": [
+    "**/.venv/**",
+    "**/node_modules/**",
+    "**/dist/**",
+    "**/build/**",
+    "**/__pycache__/**",
+    "**/htmlcov/**",
     "/Users/johnbozza/crypto1.0/**"
   ],
   "github.copilot.model": "gpt-4.1",
