--- a/requirements.txt
+++ b/requirements.txt
@@ -1,130 +1,176 @@
-absl-py==2.3.1
-aiodns==3.5.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.10.0
-astunparse==1.6.3
-async-timeout==5.0.1
-attrs==25.3.0
-beautifulsoup4==4.13.5
-blinker==1.9.0
-build==1.3.0
-cachetools==6.2.0
-ccxt==4.5.5
-certifi==2025.8.3
-cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.1.8
-contourpy==1.3.0
-cryptography==46.0.1
-cycler==0.12.1
-Cython==3.1.4
-dash==3.2.0
-dash-bootstrap-components==2.0.4
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash_daq==0.6.0
-exceptiongroup==1.3.0
-fastapi==0.116.2
-Flask==3.1.2
-flatbuffers==25.2.10
-fonttools==4.60.0
-frozenlist==1.7.0
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.45
-google-pasta==0.2.0
-grpcio==1.75.0
-h11==0.16.0
-h5py==3.14.0
-hmmlearn==0.3.3
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-iniconfig==2.1.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.2
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-keras==3.10.0
-kiwisolver==1.4.7
-lightgbm==4.5.0
-lxml==6.0.1
-Markdown==3.9
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-mdurl==0.1.2
-ml_dtypes==0.5.3
-multidict==6.6.4
-namex==0.1.0
-narwhals==2.5.0
-nest-asyncio==1.6.0
-numpy==2.0.2
-opt_einsum==3.4.0
-optree==0.17.0
-packaging==25.0
-pandas==2.3.2
-patsy==1.0.1
-pillow==11.3.0
-pipdeptree==2.28.0
-plotly==6.3.0
-pluggy==1.6.0
-propcache==0.3.2
-protobuf==6.32.1
-psutil==7.1.0
-pyarrow==21.0.0
-pycares==4.11.0
-pycparser==2.23
-pydantic==2.11.9
-pydantic_core==2.33.2
-pydeck==0.9.1
-Pygments==2.19.2
-pyparsing==3.2.4
-pyproject_hooks==1.2.0
-pytest==8.4.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-pytz==2025.2
-PyYAML==6.0.2
-referencing==0.36.2
-requests==2.32.5
-retrying==1.4.2
-rich==14.1.0
-rpds-py==0.27.1
-schedule==1.2.2
-scikit-learn==1.6.1
-scipy==1.13.1
-seaborn==0.13.2
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.8
-starlette==0.48.0
-statsmodels==0.14.5
-streamlit==1.49.1
-TA-Lib==0.6.7
-tenacity==9.1.2
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorflow==2.20.0
-termcolor==3.1.0
-threadpoolctl==3.6.0
-toml==0.10.2
-tomli==2.2.1
-tornado==6.5.2
-typing-inspection==0.4.1
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-uvicorn==0.36.0
-watchdog==6.0.0
-Werkzeug==3.1.3
-wrapt==1.17.3
-yarl==1.20.1
-zipp==3.23.0
-inquirer==3.4.0
+# ═══════════════════════════════════════════════════════════════════════════════
+# ChainBridge Production Requirements
+# PAC-ID: PAC-20260106-ENV-OVERHAUL
+# Governance: INV-OPS-002 (Dependency Freshness)
+# Updated: PAC-OCC-P32 (Trinity Gateway — Space and Time + Chainlink)
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# ─── Core Web Frameworks ───────────────────────────────────────────────────────
+fastapi>=0.100.0
+starlette>=0.27.0
+uvicorn>=0.20.0
+gunicorn>=21.0.0
+Flask>=3.0.0
+Werkzeug>=3.0.0
+
+# ─── Google AI / Generative AI ─────────────────────────────────────────────────
+google-generativeai>=0.8.0
+google-pasta>=0.2.0
+protobuf>=4.25.0
+
+# ─── Web3 / Blockchain / ZK-Proofs (PAC-OCC-P32) ───────────────────────────────
+spaceandtime>=1.1.0          # Space and Time ZK-Proof SQL
+web3>=7.0.0                   # Chainlink / Ethereum interaction
+
+# ─── Async / Networking ────────────────────────────────────────────────────────
+aiohttp>=3.9.0
+aiodns>=3.0.0
+aiohappyeyeballs>=2.0.0
+aiosignal>=1.3.0
+anyio>=4.0.0
+async-timeout>=4.0.0
+httpx>=0.25.0
+
+# ─── Data Science / ML Core ────────────────────────────────────────────────────
+numpy>=1.24.0
+pandas>=2.0.0
+scipy>=1.10.0
+scikit-learn>=1.3.0
+statsmodels>=0.14.0
+
+# ─── Deep Learning ─────────────────────────────────────────────────────────────
+tensorflow>=2.15.0
+keras>=3.0.0
+tensorboard>=2.15.0
+h5py>=3.10.0
+ml_dtypes>=0.3.0
+
+# ─── Visualization ─────────────────────────────────────────────────────────────
+matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.18.0
+altair>=5.0.0
+
+# ─── Dash Framework ────────────────────────────────────────────────────────────
+dash>=2.14.0
+dash-bootstrap-components>=1.5.0
+dash-core-components>=2.0.0
+dash-html-components>=2.0.0
+dash_daq>=0.5.0
+
+# ─── Streamlit ─────────────────────────────────────────────────────────────────
+streamlit>=1.28.0
+
+# ─── Data Validation / Serialization ───────────────────────────────────────────
+pydantic>=2.5.0
+pydantic_core>=2.14.0
+jsonschema>=4.20.0
+
+# ─── Trading / Finance ─────────────────────────────────────────────────────────
+# ccxt>=4.0.0  # Disabled - requires Python 3.10+
+TA-Lib>=0.4.0
+pyarrow>=14.0.0
+
+# ─── ML Specialized ────────────────────────────────────────────────────────────
+lightgbm>=4.0.0
+hmmlearn>=0.3.0
+
+# ─── Utilities ─────────────────────────────────────────────────────────────────
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=5.0.0
+python-dotenv>=1.0.0
+PyYAML>=6.0.0
+toml>=0.10.0
+click>=8.1.0
+rich>=13.0.0
+tenacity>=8.2.0
+schedule>=1.2.0
+psutil>=5.9.0
+watchdog>=3.0.0
+
+# ─── Git / VCS ─────────────────────────────────────────────────────────────────
+GitPython>=3.1.0
+gitdb>=4.0.0
+smmap>=5.0.0
+
+# ─── Testing ───────────────────────────────────────────────────────────────────
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+
+# ─── Type Checking / Annotations ───────────────────────────────────────────────
+typing_extensions>=4.8.0
+annotated-types>=0.6.0
+
+# ─── Build Tools ───────────────────────────────────────────────────────────────
+build>=1.0.0
+Cython>=3.0.0
+packaging>=23.0
+
+# ─── Cryptography ──────────────────────────────────────────────────────────────
+cryptography>=41.0.0
+cffi>=1.16.0
+pycparser>=2.21
+
+# ─── Misc Dependencies ─────────────────────────────────────────────────────────
+attrs>=23.0.0
+certifi>=2023.0.0
+charset-normalizer>=3.3.0
+idna>=3.6
+urllib3>=2.1.0
+six>=1.16.0
+Jinja2>=3.1.0
+MarkupSafe>=2.1.0
+Pygments>=2.17.0
+Markdown>=3.5.0
+markdown-it-py>=3.0.0
+mdurl>=0.1.0
+pillow>=10.0.0
+fonttools>=4.45.0
+contourpy>=1.2.0
+cycler>=0.12.0
+kiwisolver>=1.4.0
+pyparsing>=3.1.0
+python-dateutil>=2.8.0
+pytz>=2023.0
+tzdata>=2023.0
+nest-asyncio>=1.5.0
+sniffio>=1.3.0
+exceptiongroup>=1.2.0
+frozenlist>=1.4.0
+multidict>=6.0.0
+yarl>=1.9.0
+propcache>=0.2.0
+h11>=0.14.0
+blinker>=1.7.0
+itsdangerous>=2.1.0
+tornado>=6.4.0
+inquirer>=3.1.0
+absl-py>=2.0.0
+astunparse>=1.6.0
+flatbuffers>=23.0.0
+gast>=0.5.0
+grpcio>=1.60.0
+opt_einsum>=3.3.0
+optree>=0.10.0
+termcolor>=2.4.0
+wrapt>=1.16.0
+joblib>=1.3.0
+threadpoolctl>=3.2.0
+patsy>=0.5.0
+cachetools>=5.3.0
+zipp>=3.17.0
+importlib_metadata>=6.0.0
+importlib_resources>=6.0.0
+iniconfig>=2.0.0
+pluggy>=1.3.0
+tomli>=2.0.0
+referencing>=0.31.0
+jsonschema-specifications>=2023.0.0
+rpds-py>=0.13.0
+pydeck>=0.8.0
+narwhals>=1.0.0
+namex>=0.0.7
+soupsieve>=2.5.0
+retrying>=1.3.0
+pipdeptree>=2.13.0
