PAC-OCC-P23-FFI-BRIDGE — Rust-Python FFI Integration
SOVEREIGN GATE V2.1.3 — FFI Bridge Module

Implements Foreign Function Interface (FFI) between Rust Constitutional
Kernel and Python runtime via cdylib + ctypes.

## Rust Components (chainbridge_kernel/)

### Cargo.toml
- Added crate-type = ["lib", "cdylib"] for shared library output

### src/ffi.rs (NEW - 516 lines)
- FfiValidationResult struct (C-ABI compatible)
- extern "C" functions with catch_unwind for panic safety
- Error codes: SUCCESS(0), PANIC(-1), NULL_PTR(-2), JSON_PARSE(-3), VALIDATION_FAILED(-4), UTF8(-5)
- Key functions:
  - ffi_validate_pac() - Full validation with friction
  - ffi_validate_pac_no_friction() - Testing bypass
  - ffi_free_string() - Memory deallocation
  - ffi_kernel_version() - Version query
  - ffi_gate_count() - Gate count query
  - ffi_current_epoch_secs() - Timestamp query

### src/friction.rs
- Added from_epoch_secs(i64) for FFI timestamp conversion

### src/lib.rs
- Exported ffi module with #[allow(unsafe_code)]

## Python Components (python/)

### chainbridge_kernel.py (NEW - 418 lines)
- KernelBridge class for shared library loading
- FfiValidationResult ctypes Structure (c_void_p for pdo_json)
- ValidationResult dataclass with Pythonic interface
- Platform-aware library discovery (macOS/Linux/Windows)
- Environment variable support (CHAINBRIDGE_KERNEL_LIB)

## Verification

- Rust: 108 tests passing (107 unit + 1 doc-test)
- Python: validate_pac_no_friction returns Approved, 9/9 gates
- Memory: No leaks (c_void_p + ffi_free_string pattern)

## Constitutional Compliance

- LAW-EAP-001: catch_unwind ensures NO_WRAP_NO_BER
- LAW-TLH-001: FFI respects ACK→DISPATCH→WORK sequence
- G9 Friction: from_epoch_secs enables dwell time tracking

Refs: PAC-OCC-P23-FFI-TASKS, GOVERNANCE_LEDGER.json seq 214

--- a/chainbridge_kernel/Cargo.toml
+++ b/chainbridge_kernel/Cargo.toml
@@ -16,6 +16,7 @@ repository = "https://github.com/BIGmindz/ChainBridge"
 [lib]
 name = "chainbridge_kernel"
 path = "src/lib.rs"
+crate-type = ["lib", "cdylib"]  # PAC-OCC-P23: cdylib for FFI shared library
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
