PAC-OCC-P25-LEDGER-SYNC: Atomic ledger operations with file locking
WRAP-P25-L7-MUTEX-DESIGN (ALEX):
- Lock protocol: ACQUIRE → READ → VALIDATE → WRITE → FSYNC → RENAME → RELEASE
- Lock timeout: 5 seconds → FAIL-CLOSED
- Deadlock prevention: try_lock with timeout loop
- Sequence monotonicity: Strictly increasing (CAS-style)

WRAP-P25-L2-ATOMIC-WRITE (CODY):
- New module: chainbridge_kernel/src/ledger.rs (470 lines)
- Uses fs2 crate for cross-platform advisory file locks
- Write-ahead pattern: .ledger.tmp → fsync → atomic rename
- LedgerError enum with FFI-compatible error codes
- Helper functions: create_wrap_entry(), create_ber_entry()

VALIDATION:
- 7/7 ledger tests passed
- Concurrent test: 8 threads × 10 entries = 80 entries
- Sequence numbers verified contiguous 1..=80
- Lock timeout test passed

KERNEL STATUS: 115 tests (114 unit + 1 doc-test)

Signed-off-by: BENSON (GID-00)

--- a/chainbridge_kernel/Cargo.toml
+++ b/chainbridge_kernel/Cargo.toml
@@ -25,6 +25,7 @@ chrono = { version = "0.4", features = ["serde"] }
 thiserror = "1.0"
 sha2 = "0.10"
 hex = "0.4"
+fs2 = "0.4"  # PAC-OCC-P25: Cross-platform file locking
 
 [dev-dependencies]
 pretty_assertions = "1.4"
